--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -33,37 +33,52 @@
             android:textSize="42dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="78dp"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/pop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_first"
-        app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="187dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/pop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
 
         <TextView
             android:id="@+id/textView12"
             android:layout_width="275dp"
             android:layout_height="46dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginTop="39dp"
+            android:layout_marginEnd="63dp"
+            android:layout_marginBottom="70dp"
             android:text="Input Team number below"
             android:textSize="20dp"
             android:translationY="200dp"
-            tools:layout_editor_absoluteX="41dp"
-            tools:layout_editor_absoluteY="-18dp" />
+            app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/textInputEditText"
+            android:layout_width="366dp"
+            android:layout_height="561dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="262dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="187dp"
             android:hint="hint"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="298dp" />
+            app:layout_constraintBottom_toTopOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
