--- a/app/src/main/res/layout/fragment_second2.xml
+++ b/app/src/main/res/layout/fragment_second2.xml
@@ -81,6 +81,14 @@
             android:textSize="38dp"
             android:translationX="150dp"
             android:translationY="50dp" />
+        <TextView
+            android:id="@+id/team"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:text="Team 0"
+            android:textSize="26dp"
+            android:translationX="150dp"
+            android:translationY="88dp" />
 
         <TextView
             android:id="@+id/notesStuck"
@@ -186,7 +194,7 @@
             android:layout_marginTop="36dp"
             android:backgroundTint="#73C2F0"
             android:text="@string/next"
-            android:translationX="150dp"
+            android:translationX="230dp"
             android:translationY="600dp"
             app:cornerRadius="100dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -194,6 +202,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+
+            android:id="@+id/prev"
+            android:layout_width="300px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:backgroundTint="#73C2F0"
+            android:text="Previous"
+            android:translationX="80dp"
+            android:translationY="600dp"
+            app:cornerRadius="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.547"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/minusNotesStuck"
@@ -299,6 +322,8 @@
             android:id="@+id/pop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:rotation="0"
+            android:rotationY="0"
             android:src="@drawable/pop"
             android:translationX="0dp"
             android:translationY="0dp" />
