--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -1,74 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    tools:context=".ThirdFragment">
+
+    <RelativeLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="730dp"
+    android:padding="0dp">
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="220dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="50dp"
+        android:translationX="40dp"
+        android:translationY="470dp"
         android:text="Notes in Speaker"
-        android:textSize="26dp"
-        app:layout_constraintBottom_toTopOf="@+id/numNotes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch2" />
+        android:textSize="26dp" />
 
     <TextView
         android:id="@+id/numNotes"
-        android:layout_width="95dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="225dp"
+        android:layout_width="90dp"
+        android:layout_height="52dp"
+        android:translationX="75dp"
+        android:translationY="520dp"
         android:text="0"
         android:textAlignment="center"
-        android:textSize="26dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        android:textSize="26dp" />
 
 
     <Button
         android:id="@+id/toSecondFragment"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="-280dp"
+        android:translationX="230dp"
+        android:translationY="650dp"
         android:backgroundTint="#73C2F0"
-        android:text="Next"
-        android:translationY="-50dp"
-        app:layout_constraintTop_toBottomOf="@id/toHomePage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:text="Next" />
 
     <Switch
         android:id="@+id/switch2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="20dp"
+        android:translationX="26dp"
+        android:translationY="170dp"
         android:text="Move out of zone?"
         android:textSize="26dp"
         android:trackTintMode="src_over"
         android:thumbTintMode="src_in"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pop"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 
@@ -76,165 +57,117 @@
         android:id="@+id/textView4"
         android:layout_width="252dp"
         android:layout_height="47dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="75dp"
+        android:translationX="140dp"
+        android:translationY="38dp"
+        android:textAlignment="center"
         android:text="Autonomous"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@+id/switch2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pop"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-75dp"
-        android:layout_marginTop="170dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginBottom="2dp"
+        android:translationX="40dp"
+        android:translationY="280dp"
         android:text="Notes in Amp"
-        android:textSize="26dp"
-        app:layout_constraintBottom_toTopOf="@+id/numNotesInAmp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textSize="26dp" />
 
 
 
     <TextView
         android:id="@+id/numNotesInAmp"
-        android:layout_width="92dp"
+        android:layout_width="90dp"
         android:layout_height="52dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="225dp"
+        android:translationX="75dp"
+        android:translationY="330dp"
         android:text="0"
         android:textAlignment="center"
-        android:textSize="26dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        android:textSize="26dp" />
 
     <ImageView
         android:id="@+id/pop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="5dp"
-
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pop" />
+        android:translationX="5dp"
+        android:translationY="5dp"
+        android:src="@drawable/pop" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="-4dp" />
+        android:orientation="vertical" />
 
     <TextView
         android:id="@+id/team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="103dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="106dp"
-        android:layout_marginBottom="71dp"
-        android:text=""
-        android:textSize="26dp"
-        app:layout_constraintBottom_toTopOf="@+id/switch2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pop"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        android:translationX="200dp"
+        android:translationY="85dp"
+        android:text="team "
+        android:textSize="26dp" />
 
     <Button
         android:id="@+id/toHomePage"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginTop="113dp"
-        android:layout_marginEnd="50dp"
+        android:translationX="15dp"
+        android:translationY="650dp"
         android:backgroundTint="#73C2F0"
-        android:text="Previous"
-        app:layout_constraintEnd_toStartOf="@+id/toSecondFragment"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toBottomOf="@+id/numNotesInAmp" />
+        android:text="Previous" />
 
     <Button
         android:id="@+id/plusSpeaker"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="40dp"
+        android:translationX="165dp"
+        android:translationY="520dp"
         android:backgroundTint="#73C2F0"
         android:text="+"
-        android:textSize="26dp"
-        app:cornerRadius="100dp"
-        app:layout_constraintStart_toEndOf="@+id/numNotes"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        android:textSize="26dp" />
 
     <Button
         android:id="@+id/minusSpeaker"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="40dp"
+        android:translationX="15dp"
+        android:translationY="520dp"
         android:backgroundTint="#73C2F0"
         android:text="-"
-        android:textSize="26dp"
-        app:cornerRadius="100dp"
-        app:layout_constraintEnd_toStartOf="@+id/numNotes"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        android:textSize="26dp" />
 
     <Button
         android:id="@+id/plusAmp"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
+        android:translationX="165dp"
+        android:translationY="330dp"
         android:backgroundTint="#73C2F0"
         android:text="+"
-        android:textSize="26dp"
-        app:cornerRadius="100dp"
-        app:layout_constraintStart_toEndOf="@+id/numNotesInAmp"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        android:textSize="26dp" />
     <Button
         android:id="@+id/minusAmp"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
+        android:translationX="15dp"
+        android:translationY="330dp"
         android:backgroundTint="#73C2F0"
         android:text="-"
-        android:textSize="26dp"
-        app:cornerRadius="100dp"
-        app:layout_constraintEnd_toStartOf="@+id/numNotesInAmp"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        android:textSize="26dp" />
 
     <ImageView
         android:id="@+id/SPEAKER"
         android:layout_width="127dp"
         android:layout_height="124dp"
-        app:srcCompat="@drawable/speaker"
-        android:layout_marginStart="25dp"
-        app:layout_constraintStart_toEndOf="@+id/plusSpeaker"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:layout_editor_absoluteX="248dp"
-        tools:layout_editor_absoluteY="284dp" />
+        android:src="@drawable/speaker"
+        android:translationX="260dp"
+        android:translationY="470dp" />
     <ImageView
         android:id="@+id/AMP"
         android:layout_width="127dp"
         android:layout_height="124dp"
-        app:srcCompat="@drawable/amp"
-        android:layout_marginStart="25dp"
-        app:layout_constraintStart_toEndOf="@+id/plusAmp"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        tools:layout_editor_absoluteX="248dp"
-        tools:layout_editor_absoluteY="284dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
-
+        android:src="@drawable/amp"
+        android:translationX="260dp"
+        android:translationY="280dp"/>
+</RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
