--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -80,7 +80,7 @@
             android:tag="@string/no_change"/>
 
         <TextView
-            android:id="@+id/location"
+            android:id="@+id/bottomTag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -90,7 +90,57 @@
             android:translationX="159dp"
             android:translationY="669dp"
             android:textStyle="bold"
-            android:shadowDy="5"
+             />
+        <TextView
+            android:id="@+id/teamNumberTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Team"
+            android:textSize="24dp"
+            android:textColor="#ff0000"
+            android:translationX="123dp"
+            android:translationY="270dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <TextView
+            android:id="@+id/matchNumberTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Match"
+            android:textSize="24dp"
+            android:textColor="#ff0000"
+            android:translationX="116dp"
+            android:translationY="370dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <TextView
+            android:id="@+id/matchNumberTag2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Number"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="193dp"
+            android:translationY="370dp"
+            android:textStyle="bold"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1" />
+        <TextView
+            android:id="@+id/teamNumberTag2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Number"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:translationX="193dp"
+            android:translationY="270dp"
+            android:textStyle="bold"
             android:shadowColor="@color/black"
             android:shadowRadius="1" />
 
@@ -103,28 +153,56 @@
             android:translationY="13dp"
             android:tag=""
         />
-
-
+        <Button
+            android:id="@+id/textbacking1"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:backgroundTint="#D9D9D9"
+            android:clickable="false"
+            android:tag=""
+            android:text=""
+            android:translationX="100dp"
+            android:translationY="300dp"
+            app:cornerRadius="20dp" />
+        <Button
+            android:id="@+id/textbacking2"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:backgroundTint="#D9D9D9"
+            android:clickable="false"
+            android:tag=""
+            android:text=""
+            android:translationX="100dp"
+            android:translationY="400dp"
+            app:cornerRadius="20dp" />
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input"
             android:layout_width="140dp"
-            android:layout_height="66dp"
+            android:layout_height="50dp"
             android:hint="Team Number"
+            android:textColor="#000000"
+            android:textColorHint="#71797E"
             android:maxLength="5"
             android:inputType="number"
             android:translationX="133dp"
-            android:translationY="190dp" />
+            android:translationY="300dp"
+            android:tag="@string/no_change"/>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/matchInput"
             android:layout_width="140dp"
-            android:layout_height="66dp"
+            android:layout_height="50dp"
             android:hint="Match Number"
-
+            android:textColor="#000000"
+            android:textColorHint="#71797E"
             android:maxLength="3"
             android:inputType="number"
             android:translationX="133dp"
-            android:translationY="260dp" />
+            android:translationY="400dp"
+            android:tag="@string/no_change"/>
+
+
+
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
